--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -171,7 +171,7 @@ ul {
             border-color: $color01;
             max-height: 100%;
             overflow-y: scroll;
-           
+
 
         }
 
@@ -242,6 +242,7 @@ header {
     .col-xl-5 {
         .careerLeft {
             padding: 0 0.5rem;
+
             .info {
                 text-align: center;
 
@@ -491,6 +492,7 @@ header {
         align-items: center;
         justify-content: center;
     }
+
     a {
         padding: 5rem 0;
         text-align: center;
@@ -524,6 +526,38 @@ header {
     perspective: 1000px;
 }
 
+
+.modal {
+
+    .modal-dialog {
+        justify-content: center;
+        max-width: 100vw;
+
+        .modal-content {
+            width: auto;
+
+            .img-fluid {
+                aspect-ratio: 1/1;
+            }
+        }
+
+        .modal-content.col-xl-6 {
+            width: 50%;
+        }
+    }
+
+    .modal-footer {
+        justify-content: center;
+
+        .btn-primary {
+            a {
+                color: $color11;
+            }
+        }
+    }
+}
+
+
 @keyframes rotate3D {
     0% {
         transform: rotateY(0deg);
@@ -549,6 +583,9 @@ header {
     .poWrap .mainWrap {
         max-height: 88vh;
     }
+     .modal-content.col-xl-6 {
+         width: 75% !important;
+     }
 }
 
 @media screen and (max-width: 500px) {
@@ -560,7 +597,11 @@ header {
         }
     }
 
-   .mainWrap .col-xl-7 #career ul li .careerDiv {
+    .modal-content.col-xl-6 {
+        width: 100%!important;
+    }
+
+    .mainWrap .col-xl-7 #career ul li .careerDiv {
         gap: 0;
         padding: 2rem 0.5rem;
     }
@@ -570,23 +611,23 @@ header {
     }
 
     .mainWrap .col-xl-7 nav {
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-            left: 0;
-            background-color: #fff;
-            z-index: 9999;
-            border: 1px solid;
-            border-color: $color01;
+        position: fixed;
+        width: 100%;
+        bottom: 0;
+        left: 0;
+        background-color: #fff;
+        z-index: 9999;
+        border: 1px solid;
+        border-color: $color01;
     }
 
     .poWrap {
-        overflow-y: scroll!important;
+        overflow-y: scroll !important;
     }
 
     .mainWrap {
         flex-direction: column;
-        overflow-y: scroll!important;
+        overflow-y: scroll !important;
         gap: 2rem;
     }
 
