--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -153,64 +153,11 @@ ul {
 }
 
 .poWrap {
-<<<<<<< HEAD
+
 
     height: 100vh;
     overflow: hidden;
 
-
-    // .mainWrap {
-    //     max-height: 83vh;
-    //     border-top: 2px solid;
-    //     border-color: $color01;
-    //     overflow: hidden;
-
-    //     .col-xl-5 {
-    //         border-right: 2px solid;
-    //         border-color: $color01;
-    //         max-height: 100%;
-    //         overflow-y: scroll;
-
-
-    //     }
-
-    //     .col-xl-5::-webkit-scrollbar {
-    //         width: 2px;
-    //         /* 스크롤바의 너비 설정 */
-    //     }
-
-    //     .col-xl-5::-webkit-scrollbar-track {
-    //         background:
-    //             $color05;
-    //         /* 스크롤바 트랙 배경색 */
-    //     }
-
-    //     .col-xl-5::-webkit-scrollbar-thumb {
-    //         background: $mainPoint;
-    //         border-radius: 10px;
-    //     }
-
-    //     .col-xl-7 {
-    //         max-height: 100%;
-    //         overflow-y: scroll;
-    //     }
-
-    //     .col-xl-7::-webkit-scrollbar {
-    //         width: 2px;
-    //         /* 스크롤바의 너비 설정 */
-    //     }
-
-    //     .col-xl-7::-webkit-scrollbar-track {
-    //         background:
-    //             $color05;
-    //         /* 스크롤바 트랙 배경색 */
-    //     }
-
-    //     .col-xl-7::-webkit-scrollbar-thumb {
-    //         background: $mainPoint;
-    //         border-radius: 10px;
-    //     }
-    // }
 }
 
 .home {
@@ -218,6 +165,7 @@ ul {
     align-items: center;
     justify-content: center;
     min-height: 88vh;
+
     h1 {
         font-size: 10rem;
     }
@@ -226,7 +174,7 @@ ul {
 #sidebar {
     width: 15vw;
     border-right: 1px solid #ccc;
-        min-width: 18rem;
+    min-width: 18rem;
 
     h1 {
         padding: 1.9rem 2rem;
@@ -276,7 +224,7 @@ ul {
             border-color: $BDC03;
             display: flex;
             flex-direction: column;
-           
+
 
             .imgDiv {
                 margin-bottom: 2rem;
@@ -327,6 +275,7 @@ ul {
             border-bottom: 2px solid;
             margin-bottom: 1rem;
         }
+
         p {
             font-family: 1.25rem;
             line-height: 1.2rem;
@@ -340,23 +289,23 @@ ul {
             h4 {
                 margin-bottom: 1.5rem;
             }
+
             ul {
-                li {
-                    
-                }
+                li {}
             }
 
-           
+
         }
-         .skils {
-             ul {
-                 width: 100%;
-             }
-         }
+
+        .skils {
+            ul {
+                width: 100%;
+            }
+        }
     }
 
     .col-6 {
-        padding: 5rem 0;
+        padding: 5rem 0 2rem 0;
         margin-left: 5rem;
     }
 
@@ -391,8 +340,9 @@ ul {
             width: 100%;
         }
     }
+
     .detailText {
-        
+
         position: fixed;
         top: 0;
         right: 1rem;
@@ -420,13 +370,16 @@ ul {
 
             ul {
                 width: 80%;
+
                 li {
                     margin-bottom: 0.5rem;
                     overflow: hidden;
+
                     span {
                         color: $statusBlue;
                         font-size: 1rem;
                     }
+
                     p {
                         font-size: 1rem;
                         color: $color04;
@@ -434,6 +387,7 @@ ul {
                 }
             }
         }
+
         button {
             border-radius: 0.5rem;
             border-color: transparent;
@@ -449,84 +403,19 @@ ul {
                     color: $statusBlue;
                 }
             }
+
             a {
                 color: $color11;
             }
         }
-       
-=======
-    border-left: 2px solid;
-    border-right: 2px solid;
-    border-bottom: 2px solid;
-    height: 100vh;
-    overflow: hidden;
-    max-width: 960px;
-
-    .mainWrap {
-        max-height: 83vh;
-        border-top: 2px solid;
-        border-color: $color01;
-        overflow: hidden;
-
-        .col-xl-5 {
-            border-right: 2px solid;
-            border-color: $color01;
-            max-height: 100%;
-            overflow-y: scroll;
-
-
-        }
-
-        .col-xl-5::-webkit-scrollbar {
-            width: 2px;
-            /* 스크롤바의 너비 설정 */
-        }
-
-        .col-xl-5::-webkit-scrollbar-track {
-            background:
-                $color05;
-            /* 스크롤바 트랙 배경색 */
-        }
-
-        .col-xl-5::-webkit-scrollbar-thumb {
-            background: $mainPoint;
-            border-radius: 10px;
-        }
-
-        .col-xl-7 {
-            max-height: 100%;
-            overflow-y: scroll;
-        }
-
-        .col-xl-7::-webkit-scrollbar {
-            width: 2px;
-            /* 스크롤바의 너비 설정 */
-        }
-
-        .col-xl-7::-webkit-scrollbar-track {
-            background:
-                $color05;
-            /* 스크롤바 트랙 배경색 */
-        }
-
-        .col-xl-7::-webkit-scrollbar-thumb {
-            background: $mainPoint;
-            border-radius: 10px;
-        }
->>>>>>> 9c5399188c42b3f86c18e2b1d3b60b22ba370817
     }
 }
 
 
 
 header {
-<<<<<<< HEAD
 
     width: calc(100vw - 15vw) !important;
-=======
-    max-width: 1024px;
-    padding-top: 1rem;
->>>>>>> 9c5399188c42b3f86c18e2b1d3b60b22ba370817
 
     h1 {
         font-size: 4rem;
@@ -535,10 +424,7 @@ header {
         margin-bottom: 0;
         border: 2px solid;
         border-color: $color01;
-<<<<<<< HEAD
-=======
-        border-left: none;
->>>>>>> 9c5399188c42b3f86c18e2b1d3b60b22ba370817
+
         border-right: none;
     }
 
@@ -770,152 +656,150 @@ header {
     }
 }
 
-<<<<<<< HEAD
-=======
-.custom-progress {
-    background-color: #e0e0e0;
-    height: 20px;
-    border-radius: 10px;
-    position: relative;
-    overflow: hidden;
+.all {
+    overflow-y: scroll;
 }
 
-.custom-progress-fill {
-    height: 100%;
-    line-height: 20px;
-    text-align: center;
-    color: $color02;
-    font-size: 0.8rem;
-    font-weight: bold;
-    border-radius: 10px 0 0 10px;
-    white-space: nowrap;
+.mobileOnly {
+    display: none;
 }
 
-.animated-bg {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    div {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    a {
-        padding: 5rem 0;
-        text-align: center;
-    }
-
-    img {
-        width: 80%;
-    }
-
-}
-
-.animated-bg::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: inherit;
-    transform: scaleY(0);
-    transform-origin: bottom;
-    animation: none;
-    transition: all 0.5s;
-    /* Animation will be dynamically applied */
-}
-
-.rotate-3d {
-    display: inline-block;
-    animation: rotate3D 1s linear;
-    transform-origin: center;
-    perspective: 1000px;
-}
-
-
-.modal {
-
-    .modal-dialog {
-        justify-content: center;
-        max-width: 100vw;
-
-        .modal-content {
-            width: auto;
-
-            .swiper-slide {
-                div {
-                    overflow-y: scroll;
-                    max-height: 75vh;
-                }
-
-            }
-
-        }
-
-        .modal-content.col-xl-6 {
-            width: 50%;
-        }
-    }
-
-    .modal-footer {
-        justify-content: center;
-
-        .btn-primary {
-            width: 40%;
-            a {
-                color: $color11;
-            }
-        }
-        .btn-secondary {
-            width: 20%;
-        }
-    }
-}
-
->>>>>>> 9c5399188c42b3f86c18e2b1d3b60b22ba370817
-
-@keyframes rotate3D {
-    0% {
-        transform: rotateY(0deg);
-    }
-
-    100% {
-        transform: rotateY(360deg);
-    }
-}
-
-
-@keyframes fill-bg {
-    from {
-        transform: scaleY(0)
-    }
-
-    to {
-        transform: scaleY(1);
-    }
-}
 
 @media screen and (max-width: 1024px) {
-    .poWrap .mainWrap {
-        max-height: 88vh;
-    }
-<<<<<<< HEAD
-=======
 
-    .modal-content.col-xl-6 {
-        width: 75% !important;
+
+    .offcanvas {
+        background-color: rgba(255,255,255,0.75);
+        ul {
+            li {
+                padding: 0.5rem 0;
+                a {
+                    font-size: 2rem;
+                    width: 100%;
+                    display: block;
+                    color: $color03;
+                }
+            }
+        }
     }
->>>>>>> 9c5399188c42b3f86c18e2b1d3b60b22ba370817
+
+
+    .all {
+        overflow-y: hidden;
+    }
+
+
+    #sidebar {
+        display: none;
+    }
+
+    .webheader {
+        display: none;
+    }
+
+    header {
+        width: 100vw !important;
+    }
+
+    .project {
+        min-height: 93vh !important;
+    }
+
+    .project .projectUl li {
+        justify-content: center;
+        width: 45%;
+    }
+
+    .detailImg {
+        width: 50% !important;
+    }
+
+    .detailText {
+        width: 50% !important;
+        top: 5vh !important;
+    }
+
+    .pjd .detailText div ul {
+        width: 100%;
+
+        li {
+            .col-2 {
+                width: 25%;
+            }
+        }
+    }
+
+    .mobileOnly {
+        display: block;
+
+        header {
+            border: 2px solid;
+            padding: 0 2rem;
+            justify-content: space-between!important;
+
+            h1 {
+                border: none;
+                padding: 0;
+            }
+            button {
+                border: none;
+                background-color: transparent;
+                  margin-right: 1rem;
+
+                i {
+                    font-size: 2rem;
+                  
+                }
+            }
+        }
+    }
+
+  
+    .introduce {
+        div.col-3 {
+            width: 40%;
+        }
+
+        .left {
+            h2 {
+                width: 50%;
+                font-size: 2rem;
+            }
+
+            p {
+                font-size: 1.25rem;
+                line-height: 1.25rem;
+            }
+        }
+        .right {
+            margin-left: 3rem;
+            .block {
+                .col-7 {
+                    width: 90%;
+                }
+            }
+        }
+
+    }
+
+
 }
 
 @media screen and (max-width: 500px) {
+
+      .offcanvas {
+          ul {
+              li {
+                  padding: 0.5rem 0;
+
+                  a {
+                      font-size: 1.25rem;
+                  }
+              }
+          }
+      }
+
+
     header {
         text-align: center;
 
@@ -924,13 +808,63 @@ header {
         }
     }
 
-<<<<<<< HEAD
-=======
-    .modal-content.col-xl-6 {
-        width: 100% !important;
+    .mobileOnly {
+        header {
+            justify-content: flex-start!important;
+        }
     }
 
->>>>>>> 9c5399188c42b3f86c18e2b1d3b60b22ba370817
+    .home h1 {
+        font-size: 5rem;
+    }
+
+      header h1 {
+          border-right: 2px solid;
+      }
+
+      .all {
+        overflow-y: scroll;
+      }
+
+      .introduce .col-6 {
+        width: 100%;
+        margin-left: 2rem;
+      }
+
+      .project .projectUl li {
+        width: 90%;
+      }
+
+      .pjd {
+        flex-direction: column;
+        .col-5 {
+            width: 100%!important;
+
+           
+        }
+      }
+
+      .pjd .detailText {
+        position: relative;
+      }
+
+      .pjd .detailText h1 {
+        padding: 0 0 3rem 0;
+      }
+
+      .introduce {
+        display: flex;
+        flex-direction: column;
+
+        .div.col-3 {
+            width: 100%;
+        }
+      }
+      .introduce div.col-3 {
+        width: 100%;
+      }
+
+
     .mainWrap .col-xl-7 #career ul li .careerDiv {
         gap: 0;
         padding: 2rem 0.5rem;
